11.01.2025 - Refactor PracticeForm.java, PracticeFormProvider.java oraz usunięcie zdublowanej metody sprawdzającej zmianę koloru elementu w PracticeFormPage.java, a także dodanie lepszego sprawdzania zmiany koloru z WebElementsMethods w PracticeFormTest.java